--- a/src/components/SiteLayout.astro
+++ b/src/components/SiteLayout.astro
@@ -62,6 +62,11 @@ const selectedColorScheme = 'system';
 	</body>
 </html>
 
+<script>
+  import balanceText from 'balance-text';
+  balanceText('.balance-text, .balance-text-p > p', {watch: true});
+</script>
+
 <style is:global>
 
   @layer patterns {
