--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -16,244 +16,239 @@ const wrapperClass = clsx('prose', classValue);
 </div>
 
 <style is:global>
-@layer patterns {
+@import url(https://c0.wp.com/c/6.1.1/wp-includes/css/dist/block-library/style.css) layer(_first);
 
-  .site-layout-main:has(.prose) {
-    padding-inline: 0;
+.site-layout-main:has(.prose) {
+  padding-inline: 0;
+}
+
+.prose {
+  --prose-text-size: clamp(17px, 2.5vw, 20px);
+  
+  /* Indent for lists/block quotes */
+  --prose-indent: 1.5em;
+
+  --prose-flow-spacing-xs: calc(var(--prose-text-size) * 0.375);
+  --prose-flow-spacing-sm: calc(var(--prose-text-size) * 0.75);
+  --prose-flow-spacing-normal: calc(var(--prose-text-size) * 1.5);
+  --prose-flow-spacing-big: calc(var(--prose-text-size) * 3);
+
+  /* TODO: This is a magic number that happens to match (wideWidth - contentWidth) / 2, should make that relationship more explicit */
+  --prose-grid-inset: minmax(var(--dd-layout-padding-inline), 7rem); 
+
+  display: grid;
+  font-size: var(--prose-text-size);
+  line-height: 1.6;
+  grid-auto-flow: row;  
+  /* prettier-ignore */
+  grid-template-columns: [full-start] 1fr [wide-start] var(--prose-grid-inset) [content-start] min( calc(100% - (var(--dd-layout-padding-inline) * 2)), var(--width-content) ) [content-end] var(--prose-grid-inset) [wide-end] 1fr [full-end];
+  justify-items: start;
+  padding-block-start: var(--prose-flow-spacing-normal);
+}
+
+.prose > :is(*, p) {
+  grid-column: content;
+}
+
+.prose > .alignwide,
+.prose > .size-large {
+  grid-column: wide;
+}
+
+.prose > .alignfull {
+  grid-column: full;
+}
+
+.prose .wp-block-embed, .prose .dd-embed {
+  justify-self: center;
+}
+
+.prose :where(* + *),
+.prose :where(blockquote * + *) {
+  margin-block-start: var(--prose-flow-spacing-normal);
+}
+
+.prose > * + :where(figure, img, picture, hr, pre[class*="language-"]),
+.prose > :where(figure, img, picture, hr, pre[class*="language-"]) + * {
+  margin-block-start: var(--prose-flow-spacing-big);
+}
+
+.prose :where(img, iframe) {
+  margin: unset;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+}
+
+.prose :where(a, a:hover) {
+  color: var(--color-text-active);
+  text-decoration: underline;
+  font-weight: 500;
+  text-underline-offset: 0.15em;
+  text-decoration-thickness: 1px;
+}
+
+.prose :where(b, strong) {
+  color: var(--color-text-high-emphasis);
+  font-weight: 600;
+}
+
+.prose :where(a, blockquote, thead th) :where(b, strong) {
+  color: inherit;
+}
+
+.prose :where(h1, h2, h3, h4, h5, h6) {
+  color: var(--color-text-high-emphasis);
+  font-family: var(--font-sans);
+  font-weight: 600;
+  letter-spacing: -0.01ch;
+  line-height: 1.1;
+
+  &:has(+ figure) {
+    margin-block-end: -0.75em;
   }
 
+  &:has(+ :where(p, ul, ol)) + :where(p, ul, ol) {
+    margin-block-start: var(--prose-flow-spacing-sm);
+  }
+
+  & :where(b, strong) {
+    color: inherit;
+    font-weight: 700;
+  }
+}
+
+.prose :where(* + :where(h1, h2, h3, h4, h5, h6)) {
+  margin-block-start: var(--prose-flow-spacing-big);
+}
+
+.prose :where(h1) {
+  font-size: 2em;
+}
+
+.prose :where(h2) {
+  font-size: 1.75em;
+}
+
+.prose :where(h3) {
+  font-size: 1.5em;
+}
+
+.prose :where(ol, ul) {
+  padding-inline-start: var(--prose-indent);
+
+  :where(ol, ul) {
+    margin-block: var(--prose-flow-spacing-xs) 0;
+  }
+
+  :where(> li) {
+    padding-inline-start: 0.375em;
+  }
+}
+
+.prose > :where(ol, ul) :where(> li p) {
+  margin-block: 0.75em;
+}
+
+.prose :where(li) {
+  margin-block: var(--prose-flow-spacing-xs);
+}
+
+.prose :where(ol) {
+  list-style-type: decimal;
+}
+
+.prose :where(ol > li::marker) {
+  font-family: var(--font-sans);
+  font-weight: 600;
+  font-size: 0.875em;
+}
+
+.prose :where(ul) {
+  list-style-type: disc;
+}
+
+.prose :where(ul, ol) :where(ul, ol) {
+  margin-block-start: 0.5em;
+  margin-block-end: 0;
+}
+
+.prose :where(hr) {
+  border-color: var(--color-hairline);
+  border-top-width: 1px;
+
+  + * {
+    margin-block-start: 0;
+  }
+}
+
+.prose :where(blockquote) {
+  --prose-quote-border-width: 0.20rem;
+  border-inline-start-color: var(--color-hairline);
+  border-inline-start-style: solid;
+  border-inline-start-width: var(--prose-quote-border-width);
+  color: var(--color-text-low-emphasis);
+  font-family: var(--font-sans);
+  padding-inline-start: calc(var(--prose-indent) - var(--prose-quote-border-width) - 0.5rem);
+  padding-inline-end: var(--prose-indent);
+
+  margin-inline-start: 0.5rem;
+}
+
+.prose :where(figure blockquote) {
+  margin: 0;
+}
+
+.prose :where(figure) {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.prose :where(figcaption, .wp-block-pullquote__citation) {
+  color: var(--color-text-low-emphasis);
+  font-family: var(--font-sans);
+  font-size: 0.875em;
+  line-height: 1.375;
+  margin-block-start: 1em;
+  margin-block-end: 0;
+  max-width: 60ch;
+  text-align: center;
+  padding-inline: var(--dd-layout-padding-inline);
+}
+
+.prose :where(code) {
+  color: var(--color-text-code);
+  font-family: var(--font-mono);
+  font-weight: 500;
+}
+
+.prose :where(a, h1, h2, h3, h4, h5, h6, blockquote, thead th) :where(code) {
+  color: inherit;
+}
+
+.prose :where(pre) {
+  color: var(--color-text-code);
+  font-family: var(--font-mono);
+  font-weight: 400;
+  overflow-x: auto;
+
+  code {
+    background-color: transparent;
+    color: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+  }
+}
+
+.prose :where(.wp-block-embed__wrapper) {
+  display: contents;
+}
+
+@layer patterns {
+
   .prose {
-    --prose-text-size: clamp(17px, 2.5vw, 20px);
-    
-    /* Indent for lists/block quotes */
-    --prose-indent: 1.5em;
-
-    --prose-flow-spacing-xs: calc(var(--prose-text-size) * 0.375);
-    --prose-flow-spacing-sm: calc(var(--prose-text-size) * 0.75);
-    --prose-flow-spacing-normal: calc(var(--prose-text-size) * 1.5);
-    --prose-flow-spacing-big: calc(var(--prose-text-size) * 3);
-
-    /* TODO: This is a magic number that happens to match (wideWidth - contentWidth) / 2, should make that relationship more explicit */
-    --prose-grid-inset: minmax(var(--dd-layout-padding-inline), 7rem); 
-
-    display: grid;
-    grid-auto-flow: row;
-    /* prettier-ignore */
-    grid-template-columns: [full-start] 1fr [wide-start] var(--prose-grid-inset) [content-start] min( calc(100% - (var(--dd-layout-padding-inline) * 2)), var(--width-content) ) [content-end] var(--prose-grid-inset) [wide-end] 1fr [full-end];
-    justify-items: start;
-    padding-block-start: var(--prose-flow-spacing-normal);
-    
-    > :is(*, p, .aligncontent) {
-      grid-column: content;
-    }
-
-    > .alignwide,
-    > .size-large {
-      grid-column: wide;
-    }
-
-    > .alignfull {
-      grid-column: full;
-    }
-
-    .wp-block-embed {
-      justify-self: center;
-    }
-
-    font-size: var(--prose-text-size);
-    line-height: 1.6;
-
-    & :where(* + *),
-    & :where(blockquote * + *) {
-      margin-block-start: var(--prose-flow-spacing-normal);
-    }
-
-    & > * + :where(figure, img, picture, hr, pre[class*="language-"]) {
-      margin-block-start: var(--prose-flow-spacing-big);
-    }
-
-    & > :where(figure, img, picture, hr, pre[class*="language-"]) + * {
-      margin-block-start: var(--prose-flow-spacing-big);
-    }
-
-    :where(img, iframe) {
-      margin: unset;
-      width: 100%;
-      height: auto;
-      max-width: 100%;
-    }
-
-    :where(a) {
-      color: var(--color-text-active);
-    }
-
-    :where(a:hover) {
-      color: var(--color-text-active);
-    }
-
-    :where(b, strong) {
-      color: var(--color-text-high-emphasis);
-      font-weight: 600;
-    }
-
-    :where(a, blockquote, thead th) :where(b, strong) {
-      color: inherit;
-    }
-
-    :where(h1, h2, h3, h4, h5, h6) {
-      color: var(--color-text-high-emphasis);
-      font-family: var(--font-sans);
-      font-weight: 600;
-      letter-spacing: -0.01ch;
-      line-height: 1.1;
-
-      &:has(+ figure) {
-        margin-block-end: -0.75em;
-      }
-
-      + :where(p) {
-        margin-block-start: var(--prose-flow-spacing-sm);
-      }
-
-      :where(b, strong) {
-        color: inherit;
-        font-weight: 700;
-      }
-    }
-
-    :where(* + :where(h1, h2, h3, h4, h5, h6)) {
-      margin-block-start: var(--prose-flow-spacing-big);
-    }
-
-    :where(h1) {
-      font-size: 2em;
-    }
-
-    :where(h2) {
-      font-size: 1.75em;
-    }
-
-    :where(h3) {
-      font-size: 1.5em;
-    }
-
-    :where(ol, ul) {
-      padding-inline-start: var(--prose-indent);
-
-      :where(ol, ul) {
-        margin-block: var(--prose-flow-spacing-xs) 0;
-      }
-
-      :where(> li) {
-        padding-inline-start: 0.375em;
-      }
-    }
-
-    > :where(ol, ul) {
-      > li p {
-        margin-block: 0.75em;
-      }
-    }
-
-    li {
-      margin-block: var(--prose-flow-spacing-xs);
-    }
-
-    ol {
-      list-style-type: decimal;
-    }
-
-    ul {
-      list-style-type: disc;
-    }
-
-    ol > li::marker {
-      font-family: var(--font-sans);
-      font-weight: 600;
-      font-size: 0.875em;
-    }
-
-    ul > li::marker {
-    }
-
-    :where(ul, ol) :where(ul, ol) {
-      margin-block-start: 0.5em;
-      margin-block-end: 0;
-    }
-
-    hr {
-      border-color: var(--color-hairline);
-      border-top-width: 1px;
-
-      + * {
-        margin-block-start: 0;
-      }
-    }
-
-    :where(blockquote) {
-      --prose-quote-border-width: 0.20rem;
-      border-inline-start-color: var(--color-hairline);
-      border-inline-start-style: solid;
-      border-inline-start-width: var(--prose-quote-border-width);
-      color: var(--color-text-low-emphasis);
-      font-family: var(--font-sans);
-      padding-inline-start: calc(var(--prose-indent) - var(--prose-quote-border-width) - 0.5rem);
-      padding-inline-end: var(--prose-indent);
-
-      margin-inline-start: 0.5rem;
-    }
-
-    figure blockquote {
-      margin: 0;
-    }
-
-    :where(figure) {
-      align-items: center;
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-    }
-
-    :where(figcaption, .wp-block-pullquote__citation) {
-      color: var(--color-text-low-emphasis);
-      font-family: var(--font-sans);
-      font-size: 0.875em;
-      line-height: 1.375;
-      margin-block-start: 1em;
-      margin-block-end: 0;
-      max-width: 60ch;
-      text-align: center;
-      padding-inline: var(--dd-layout-padding-inline);
-    }
-
-    code {
-      color: var(--color-text-code);
-      font-family: var(--font-mono);
-      font-weight: 500;
-    }
-
-    :where(a, h1, h2, h3, h4, h5, h6, blockquote, thead th) code {
-      color: inherit;
-    }
-
-    pre {
-      color: var(--color-text-code);
-      font-family: var(--font-mono);
-      font-weight: 400;
-      overflow-x: auto;
-
-      code {
-        background-color: transparent;
-        color: inherit;
-        font-weight: inherit;
-        font-size: inherit;
-      }
-    }
-
-    :where(.wp-block-embed__wrapper) {
-      display: contents;
-    }
-
     :where(figure) :where(iframe[src*="youtube.com"], iframe[src*="cloudinary.com"]) {
       aspect-ratio: 16 / 9;
       height: auto;
