--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,340 +1,9 @@
-@import url("https://cdn.demaree.net/fonts/tiempos/fonts.css");
+@import url("https://fonts.demaree.me/tiempos");
+@import url("https://fonts.demaree.me/soehne");
+@import url("https://fonts.demaree.me/soehne-mono");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  color-scheme: light;
-}
-
-body {
-  @apply bg-stone-100 dark:bg-neutral-900 dark:text-neutral-50;
-}
-
-@layer components {
-  .dateline {
-    @apply font-sans font-semibold tracking-wide uppercase;
-  }
-
-  .prose {
-    --tw-prose-body: theme("colors.zinc.700");
-    --tw-prose-headings: theme("colors.zinc.900");
-    --tw-prose-lead: theme("colors.zinc.600");
-    --tw-prose-links: theme("colors.zinc.900");
-    --tw-prose-bold: theme("colors.zinc.900");
-    --tw-prose-counters: theme("colors.zinc.500");
-    --tw-prose-bullets: theme("colors.zinc.300");
-    --tw-prose-hr: theme("colors.zinc.200");
-    --tw-prose-quotes: theme("colors.zinc.900");
-    --tw-prose-quote-borders: theme("colors.zinc.200");
-    --tw-prose-captions: theme("colors.zinc.500");
-    --tw-prose-code: theme("colors.zinc.900");
-    --tw-prose-pre-code: theme("colors.zinc.200");
-    --tw-prose-pre-bg: theme("colors.zinc.800");
-    --tw-prose-th-borders: theme("colors.zinc.300");
-    --tw-prose-td-borders: theme("colors.zinc.200");
-    --tw-prose-invert-body: theme("colors.zinc.300");
-    --tw-prose-invert-headings: colors.white;
-    --tw-prose-invert-lead: theme("colors.zinc.400");
-    --tw-prose-invert-links: colors.white;
-    --tw-prose-invert-bold: colors.white;
-    --tw-prose-invert-counters: theme("colors.zinc.400");
-    --tw-prose-invert-bullets: theme("colors.zinc.600");
-    --tw-prose-invert-hr: theme("colors.zinc.700");
-    --tw-prose-invert-quotes: theme("colors.zinc.100");
-    --tw-prose-invert-quote-borders: theme("colors.zinc.700");
-    --tw-prose-invert-captions: theme("colors.zinc.400");
-    --tw-prose-invert-code: colors.white;
-    --tw-prose-invert-pre-code: theme("colors.zinc.300");
-    --tw-prose-invert-pre-bg: "rgb(0 0 0 / 50%)";
-    --tw-prose-invert-th-borders: theme("colors.zinc.600");
-    --tw-prose-invert-td-borders: theme("colors.zinc.700");
-
-    --prose-text-size: clamp(17px, 2.5vw, 20px);
-
-    --flow-spacing-xs: calc(var(--prose-text-size) * 0.375);
-    --flow-spacing-sm: calc(var(--prose-text-size) * 0.75);
-    --flow-spacing-normal: calc(var(--prose-text-size) * 1.5);
-    --flow-spacing-big: calc(var(--prose-text-size) * 3);
-
-    --prose-indent: 1.625em;
-
-    color: var(--tw-prose-body);
-    font-size: var(--prose-text-size);
-    /* font-variation-settings: "opsz" 18; */
-    line-height: 1.6;
-
-    & :where(* + *),
-    & :where(blockquote * + *) {
-      margin-block-start: var(--flow-spacing-normal);
-    }
-
-    & > :where(figure, img, picture, hr, pre[class*="language-"]) {
-      &,
-      & + * {
-        margin-block-start: var(--flow-spacing-big);
-      }
-    }
-
-    :where(img) {
-      margin: unset;
-    }
-
-    :where(a) {
-      @apply transition-colors underline decoration-1 underline-offset-4 text-black dark:text-white;
-    }
-
-    :where(a:hover) {
-      @apply text-red-500 dark:text-red-400;
-    }
-
-    :where(b, strong) {
-      @apply text-black dark:text-white;
-      font-weight: 600;
-    }
-
-    :where(a, blockquote, thead th) :where(b, strong) {
-      color: inherit;
-    }
-
-    :where(ol, ul) {
-      padding-inline-start: var(--prose-indent);
-
-      :where(ol, ul) {
-        margin-block: var(--flow-spacing-xs) 0;
-      }
-
-      > li {
-        padding-inline-start: 0.375em;
-      }
-    }
-
-    > :where(ol, ul) {
-      > li p {
-        margin-block: 0.75em;
-      }
-    }
-
-    li {
-      margin-block: var(--flow-spacing-xs);
-    }
-
-    ol {
-      list-style-type: decimal;
-    }
-
-    /* OMITTED: OL [type] attribute styles */
-
-    ul {
-      list-style-type: disc;
-    }
-
-    ol > li::marker {
-      @apply font-sans font-semibold;
-      color: var(--tw-prose-counters);
-      font-size: 0.875em;
-    }
-
-    ul > li::marker {
-      color: var(--tw-prose-bullets);
-    }
-
-    :where(ul, ol) :where(ul, ol) {
-      margin-block-start: 0.5em;
-      margin-block-end: 0;
-    }
-
-    hr {
-      border-color: var(--tw-prose-hr);
-      border-top-width: 1px;
-
-      + * {
-        margin-block-start: 0;
-      }
-    }
-
-    :where(blockquote) {
-      border-left-color: var(--tw-prose-quote-borders);
-      border-left-width: 0.25em;
-      /* color: var(--tw-prose-quotes); */
-      padding-inline-start: calc(var(--prose-indent) - 0.25em);
-    }
-
-    figure blockquote {
-      margin: 0;
-    }
-
-    :where(h1, h2, h3, h4, h5, h6) {
-      color: var(--tw-prose-headings);
-      font-family: var(--font-sans);
-      font-weight: 600;
-      letter-spacing: -0.01ch;
-      line-height: 1.1;
-      margin-block-start: var(--flow-spacing-big);
-
-      + :where(p) {
-        margin-block-start: var(--flow-spacing-sm);
-      }
-
-      :where(b, strong) {
-        color: inherit;
-        font-weight: 700;
-      }
-    }
-
-    :where(h1) {
-      font-size: 2em;
-    }
-
-    :where(h2) {
-      font-size: 1.75em;
-    }
-
-    :where(h3) {
-      font-size: 1.5em;
-    }
-
-    :where(figure) {
-      align-items: center;
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-    }
-
-    :where(figcaption, .wp-block-pullquote__citation) {
-      color: var(--tw-prose-captions);
-      font-family: var(--font-sans);
-      font-size: 0.875em;
-      font-style: normal;
-      line-height: 1.375;
-      margin-block-start: 0.875em;
-      margin-block-end: 0;
-      max-width: 60ch;
-      text-align: center;
-    }
-
-    code {
-      color: var(--tw-prose-code);
-      font-weight: 500;
-    }
-
-    :where(a, h1, h2, h3, h4, h5, h6, blockquote, thead th) code {
-      color: inherit;
-    }
-
-    /* TODO: Code styles, need to see how they interact with prism */
-    pre {
-      color: var(--tw-prose-pre-code);
-      background-color: var(--tw-prose-pre-bg);
-      overflow-x: auto;
-      font-weight: 400;
-
-      code {
-        background-color: transparent;
-        color: inherit;
-        font-weight: inherit;
-        font-size: inherit;
-      }
-    }
-
-    /* OMITTED: table styles */
-
-    :where(.wp-block-embed__wrapper) {
-      display: contents;
-    }
-
-    :where(figure iframe[src*="youtube.com"]) {
-      aspect-ratio: 16 / 9;
-      height: auto;
-      width: 100%;
-    }
-
-    :where(figure[class*="gallery"]) {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      gap: var(--flow-spacing-sm);
-      align-items: unset;
-
-      :where(figure:has(img)) {
-        display: flex;
-        flex-direction: row;
-        flex-grow: 1;
-        margin: unset;
-        width: calc(50% - (var(--flow-spacing-sm) / 2));
-
-        img {
-          flex: 1 0 0%;
-          height: 100%;
-          object-fit: cover;
-          width: 100%;
-        }
-      }
-    }
-
-    .drop-cap .initial {
-      @apply font-sans;
-      float: left;
-      font-size: 3.25em;
-      font-variation-settings: "wdth" 96;
-      font-weight: 540;
-      line-height: 1;
-      margin-right: 0.15em;
-      transform: translateX(0.025em);
-    }
-
-    .drop-cap .initial:before,
-    .drop-cap .initial:after {
-      content: "";
-      display: block;
-    }
-    .drop-cap .initial:before {
-      margin-bottom: 0.075em;
-    }
-    .drop-cap .initial:after {
-      margin-top: -0.5em;
-    }
-
-    @screen sm {
-      .drop-cap .initial {
-        font-size: 5.25em !important;
-        transform: translateX(0.075em);
-        font-variation-settings: "wdth" 120;
-      }
-
-      .drop-cap .initial:before {
-        margin-bottom: 0;
-      }
-
-      .drop-cap .initial:after {
-        margin-top: -0.1em;
-      }
-    }
-  }
-
-  .prose-grid {
-    display: grid;
-    grid-auto-flow: row;
-    /* prettier-ignore */
-    grid-template-columns: [full-start] 1fr [wide-start] minmax(var(--inset-x), 7rem) [content-start] min( calc(100% - (var(--inset-x) * 2)), 45rem ) [content-end] minmax(var(--inset-x), 7rem) [wide-end] 1fr [full-end];
-    justify-items: start;
-
-    > :is(*, p, .aligncontent) {
-      grid-column: content;
-    }
-
-    > .alignwide,
-    > .size-large {
-      grid-column: wide;
-    }
-
-    > .alignfull {
-      grid-column: full;
-    }
-
-    .wp-block-embed {
-      justify-self: center;
-    }
-  }
-}
+@import "./tokens/tokens.css";
