--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -6,6 +6,7 @@
   align-items: center;
   column-gap: 2rem;
   column-gap: 6cqi;
+  row-gap: 1.25rem;
 }
 
 .intro-grid > * {
@@ -13,9 +14,7 @@
 }
 
 .intro-image {
-  width: clamp(200px, 67cqi, 270px);
-  margin-bottom: 4cqi;
-  margin-top: -4cqi;
+  width: clamp(240px, 67cqi, 270px);
 }
 
 @supports not (container-type: inline-size) {
@@ -103,6 +102,7 @@
 @container intro (min-inline-size: 36rem) {
   .intro-grid {
     grid-template-columns: 25cqi 1fr;
+    grid-template-rows: auto 1fr;
     grid-auto-flow: row;
     row-gap: clamp(2rem, 5cqi, 3rem);
   }
@@ -126,7 +126,9 @@
   .intro-image {
     width: 100%;
     grid-column: 1 / span 1;
+    grid-row: 1 / -1;
     margin: 0;
+    align-self: start;
   }
 }
 
