--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -1,34 +1,11 @@
 ---
-import SiteLayout from "@/components/SiteLayout.astro";
-import BlogPostIndex from "@/components/Blog";
-import { getAllPosts } from "@/lib/wordpress";
-import transformGutenberg from "@/lib/wordpress/transformGutenberg";
-import type { Metadata } from "@/types/metadata";
+import { getCollection, getEntryBySlug, CollectionEntry } from 'astro:content';
+import SiteLayout from '@/components/SiteLayout.astro';
+import IndexPost from './_IndexPost.astro';
 
-const page = parseInt(Astro.props.page || "1");
-
-const title = page > 1 ? `Blog posts - Page ${page}` : "Blog posts";
-
-const metadata: Metadata = {
-  title,
-  description: "Notes from the desk of David Demaree. Writing about tech, business, digital culture, and whatever else crosses my mind.",
-}
-
-const { posts, totalPages } = await getAllPosts({ page });
-if (!posts) {
-  return new Response(null, {
-    status: 404,
-    statusText: 'Not found'
-  });
-}
-
-await Promise.all(
-  posts.map((p) => {
-    return p.render(transformGutenberg);
-  })
-);
-
+const allBlogPosts = await getCollection('blog');
+allBlogPosts.sort((a, b) => a.data.date > b.data.date ? -1 : 1);
 ---
-<SiteLayout metadata={metadata}>
-  <BlogPostIndex posts={posts} pageNum={page} totalPages={totalPages} />
+<SiteLayout>
+  {allBlogPosts.map((post: CollectionEntry<"blog">) => <IndexPost post={post} />)}
 </SiteLayout>
