--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -1,44 +1,35 @@
 ---
 import type { Metadata } from "@/types/metadata";
 
-import { getSinglePost, WordpressPost } from "@lib/wordpress";
-import transformGutenberg from "@lib/wordpress/transformGutenberg";
-
+import { getEntryBySlug } from "astro:content";
 import { decode } from "html-entities";
-import { blogPostUrl } from "@lib/urls";
 
-import FooterOrnament from "@components/FooterOrnament";
+import { blogPostUrl } from "@/lib/urls";
 import SiteLayout from "@/components/SiteLayout.astro";
 import PostHeader from "@/components/Blog/PostHeader.astro";
+import FooterOrnament from "@/components/FooterOrnament";
 
-const slug = Astro.params.slug;
-if(!slug) {
-  return new Response(null, {
-    status: 404,
-    statusText: 'Not found'
-  });
+const { slug } = Astro.params;
+
+const post = await getEntryBySlug("blog", slug as any);
+
+if(!slug || !post) {
+  Astro.response.status = 404;
+  throw new Error("Not found");
 }
 
-const post = await getSinglePost(slug);
-
-const {
-  title,
-  content: _content,
-  excerpt: subtitle,
-  date,
-} = post as WordpressPost;
-
-const htmlContent = await transformGutenberg(_content);
+const { title, excerpt, date } = post.data;
+const { Content } = await post.render();
 
 const metadata: Metadata = {
   title: decode(title),
-  description: decode(subtitle),
+  description: decode(excerpt),
   openGraph: {
     title: decode(title),
-    description: decode(subtitle),
+    description: decode(excerpt),
     authors: ["David Demaree"],
     type: "article",
-    publishedTime: date,
+    publishedTime: date.toISOString(),
     images: [
       {
         url: `/opengraph-image/post/${slug}.png`,
@@ -60,9 +51,11 @@ const metadata: Metadata = {
 
 ---
 <SiteLayout metadata={metadata}>
-  <div class="stack">
-    <PostHeader title={title} subtitle={subtitle} date={date} />
-    <main set:html={htmlContent} class="prose" />
+  <article class="stack">
+    <PostHeader title={title} date={date} subtitle={excerpt} />
+    <main class="prose">
+      <Content />
+    </main>
     <FooterOrnament />
-  </div>
+  </article>
 </SiteLayout>
