--- a/src/pages/posts/_IndexPost.astro
+++ b/src/pages/posts/_IndexPost.astro
@@ -12,7 +12,9 @@ const { readingTime } = remarkPluginFrontmatter;
 
 ---
 <article>
-  <h1>{title}</h1>
+  <h1>
+    <a href={`/post/${post.slug}`}>{title}</a>
+  </h1>
   <time>{date}</time>
   <div>{readingTime.text}</div>
   {readingTime.minutes <= 8 && <div class="prose">
