WIP post images working in dev

--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -1,7 +1,6 @@
 ---
 import type { Metadata } from "@/types/metadata";
-
-import { getEntryBySlug } from "astro:content";
+import { type CollectionEntry, getCollection, getEntryBySlug } from "astro:content";
 import { decode } from "html-entities";
 
 import { blogPostUrl } from "@/lib/urls";
@@ -9,9 +8,24 @@ import SiteLayout from "@/components/SiteLayout.astro";
 import PostHeader from "@/components/Blog/PostHeader.astro";
 import FooterOrnament from "@/components/FooterOrnament";
 
-const { slug } = Astro.params;
+export const getStaticPaths = (async () => {
 
-const post = await getEntryBySlug("blog", slug as any);
+  const allBlogPosts = await getCollection('blog');
+  return allBlogPosts.map((p: CollectionEntry<"blog">) => ({
+    params: {
+      slug: p.slug
+    },
+    props: {
+      post: p
+    }
+  }));
+});
+
+
+const { slug } = Astro.params;
+const { post } = Astro.props;
+
+// const post = await getEntryBySlug("blog", slug as any);
 
 if(!slug || !post) {
   Astro.response.status = 404;
