--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.demaree.me/tiempos");
 @import url("https://fonts.demaree.me/soehne");
 @import url("https://fonts.demaree.me/soehne-mono");
+@import url("https://fonts.demaree.me/roslindale/v2");
 
 @tailwind base;
 @tailwind components;
@@ -64,7 +65,6 @@
 }
 
 @layer components {
-
   .theme-light {
     --tweets-background-color: oklch(97% 0.01 230.56);
     --tweets-border-color: oklch(82% 0.02 230.56);
@@ -85,19 +85,43 @@
     --tweets-date-color: var(--tweets-footer-color);
   }
 
+  .grid-inset {
+    --dd-layout-padding-inline: clamp(1rem, 5.5vw, 2.5rem);
+    --prose-grid-inset: minmax(var(--dd-layout-padding-inline), 4rem);
+
+    display: grid;
+
+    grid-template-columns: 1fr;
+    grid-template-columns:
+      1fr calc(100% - (var(--dd-layout-padding-inline) * 2))
+      1fr;
+    grid-auto-flow: row;
+
+    & > * {
+      grid-column: 2 / span 1;
+    }
+
+    /* "[full-start] 1fr [wide-start] var(--prose-grid-inset) [content-start] min( calc(100% - (var(--dd-layout-padding-inline) * 2)), var(--width-content) ) [content-end] var(--prose-grid-inset) [wide-end] 1fr [full-end]", */
+  }
+
   .dd-embed.dd-embed-tweet {
+    --tweet-avatar-size: 2rem;
+    container-type: inline-size;
+    max-width: 580px;
+  }
+
+  .dd-embed.dd-embed-tweet .tweet-wrapper {
     @apply font-sans;
     background-color: var(--tweets-background-color);
     border-color: var(--tweets-border-color);
     border-style: solid;
     border-width: 1px;
     border-radius: var(--tweets-border-radius, 0.5em);
-    max-width: 600px;
-    
+
     display: grid !important;
     column-gap: 1rem;
     grid-auto-flow: row;
-    grid-template-columns: 4rem 1fr;
+    grid-template-columns: var(--tweet-avatar-size) 1fr;
     grid-template-rows: auto auto;
     line-height: 1.4;
     padding: 1em;
@@ -109,7 +133,7 @@
     }
 
     & > * {
-      grid-column: 2 / -1;
+      grid-column: 1 / -1;
       width: 100%;
     }
 
@@ -128,8 +152,6 @@
       align-self: start;
       grid-column: 1/2;
       grid-row: 1/-1;
-      height: 4rem;
-      width: 4rem;
     }
 
     .tweet-author-handle {
@@ -166,7 +188,15 @@
     .tweet-date {
       color: var(--tweets-date-color);
       text-decoration: none;
-      text-transform: uppercase; 
+      text-transform: uppercase;
+    }
+
+    @container (min-inline-size: 480px) {
+      --tweet-avatar-size: 3rem;
+
+      & > * {
+        grid-column: 2 / -1;
+      }
     }
   }
 }
