Move some stuff to utils

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import SiteLayout from "@/components/SiteLayout.astro";
 
-import { siteUrl } from "@lib/urls";
+import { siteUrl } from "@/utils";
 import { Stack } from "@components/Layout";
 import MyLinks from "@components/MyLinks";
 import Balance from "@components/Balance.astro";
