--- a/src/pages/wp/post/[slug].astro
+++ b/src/pages/wp/post/[slug].astro
@@ -5,7 +5,7 @@ import { getSinglePost, WordpressPost } from "@lib/wordpress";
 import transformGutenberg from "@lib/wordpress/transformGutenberg";
 
 import { decode } from "html-entities";
-import { blogPostUrl } from "@lib/urls";
+import { blogPostUrl } from "@/utils";
 
 import FooterOrnament from "@components/FooterOrnament";
 import SiteLayout from "@/components/SiteLayout.astro";
