--- a/src/components/BaseLayout.astro
+++ b/src/components/BaseLayout.astro
@@ -9,7 +9,6 @@ import type { Metadata } from '@/types/metadata';
 import type { SiteSection } from './SiteMenu';
 
 import BaseHead from './BaseHead.astro';
-import ClipPaths from './ClipPaths';
 
 export interface Props {
   section?: SiteSection;
@@ -91,6 +90,17 @@ const { metadata = {} } = Astro.props;
 
   <body class="theme-light dark:theme-dark">
     <slot />
-    <ClipPaths />
+    <svg width="10" height="10" viewBox="0 0 10 10">
+      <clipPath id="squircleClip" clipPathUnits="objectBoundingBox">
+        <path
+          fill="red"
+          stroke="none"
+          d="M 0,0.5 C 0,0 0,0 0.5,0 S 1,0 1,0.5 1,1 0.5,1 0,1 0,0.5"
+        />
+      </clipPath>
+      <clipPath id="squircleBoxClip" clipPathUnits="objectBoundingBox">
+        <circle cx="5" cy="5" r="5" fill="red" />
+      </clipPath>
+    </svg>
 	</body>
 </html>
