--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -13,12 +13,13 @@ const { showLinks = true } = Astro.props;
 <footer class="@container px-inset py-6 font-serif">
   <div class="flex flex-col gap-6 items-center justify-end text-sm">
     {showLinks && <MyLinks className="text-xl max-w-[520px] py-4" />}
-    <div class="text-center grid gap-1">
+    <div class="text-center flex gap-2 italic">
       <p class="m-0">
         Made with{" "}
         <FontAwesomeIcon icon={faHeart} className="text-red-500" />{" "}
         in New Jersey, U.S.A.
       </p>
+      <span>&bullet;</span>
       <p class="text-ink-medium m-0">
         &ldquo;Have courage, and be kind.&rdquo;
       </p>
