--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -12,7 +12,7 @@ const { pathname } = Astro.url
 ---
 <header
   id="nav-parent"
-  class="grid h-20 grid-cols-[auto,1fr] items-center gap-8 px-inset"
+  class="site-header grid h-20 grid-cols-[auto,1fr,auto] items-center gap-8 px-inset"
 >
   <div>
     <a href="/">
@@ -21,7 +21,20 @@ const { pathname } = Astro.url
     </a>
   </div>
 
-  <div class="flex items-center justify-end gap-3">
+  <div class="flex items-center justify-start gap-3">
     <SiteMenu mobileBreakpoint={mobileScreen} client:load />
   </div>
+  <div class="flex gap-[0.5em]">
+    <div>TW</div>
+    <div>MD</div>
+    <div>FD</div>
+    <div>DM</div>
+  </div>
 </header>
+
+<style>
+  .site-header {
+    border-bottom: 1px solid var(--dd-col-divider, #444);
+    box-shadow: 0 1px 0.5em #222;
+  }
+</style>
