--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -5,7 +5,7 @@ import { decode } from "html-entities";
 
 import { blogPostUrl } from "@/utils";
 import SiteLayout from "@/components/SiteLayout.astro";
-import PostHeader from "@/components/Blog/PostHeader.astro";
+// import PostHeader from "@/components/Blog/PostHeader.astro";
 import FooterOrnament from "@/components/FooterOrnament";
 
 export const prerender = true;
@@ -66,7 +66,7 @@ const metadata: Metadata = {
 ---
 <SiteLayout metadata={metadata}>
   <article class="stack">
-    <PostHeader title={title} date={date} subtitle={excerpt} />
+    <!-- <PostHeader title={title} date={date} subtitle={excerpt} /> -->
     <main class="prose">
       <Content />
     </main>
