--- a/src/components/SiteLayout.astro
+++ b/src/components/SiteLayout.astro
@@ -3,6 +3,7 @@ import { ClassValue, clsx } from "clsx";
 import BaseLayout, { type Props as LayoutProps } from "./BaseLayout.astro";
 import SiteFooter, { type Props as FooterProps } from "./SiteFooter.astro";
 import SiteHeader from "./SiteHeader.astro";
+import ReactSiteHeader from "@/components/SiteHeader";
 
 export type Props = LayoutProps & FooterProps & {
   mainClass?: ClassValue;
@@ -13,7 +14,10 @@ const { mainWrapper = true, showLinks = true } = Astro.props;
 ---
 <BaseLayout metadata={Astro.props.metadata} section={Astro.props.section}>
   <div class="grid grid-cols-1 grid-rows-[auto_1fr_auto] min-h-screen">
-    <SiteHeader />
+    <div>
+      <ReactSiteHeader />
+      <SiteHeader />
+    </div>
     {mainWrapper && <main class={clsx(Astro.props.mainClass)}>
       <slot />
     </main>}
