--- a/src/components/BaseLayout.astro
+++ b/src/components/BaseLayout.astro
@@ -1,25 +1,30 @@
 ---
-import '@/main.css';
+import type { Metadata } from '@/types/metadata';
+import type { SiteSection } from './SiteMenu';
+import { type ClassValue, clsx } from 'clsx';
+
 
 import { config } from "@fortawesome/fontawesome-svg-core";
 config.autoAddCss = false;
 import "@fortawesome/fontawesome-svg-core/styles.css";
-
-import type { Metadata } from '@/types/metadata';
-import type { SiteSection } from './SiteMenu';
+import '@/main.css';
 
 import BaseHead from './BaseHead.astro';
 
 export interface Props {
   section?: SiteSection;
   metadata?: Metadata;
+  bodyClass?: ClassValue;
 }
 
-const { metadata = {} } = Astro.props;
+const { metadata = {}, bodyClass } = Astro.props;
 ---
 <html lang="en-US">
 	<head>
 		<BaseHead metadata={metadata} />
+    <link rel="stylesheet" href="https://use.typekit.net/hnq1bvb.css">
+    <link rel="stylesheet" href="https://fonts.demaree.me/signifier">
+    <link rel="stylesheet" href="https://fonts.demaree.me/epicene">
     <slot name="head" />
     <script is:inline>
       const COOKIE_NAME = `dd-theme`;
@@ -88,7 +93,7 @@ const { metadata = {} } = Astro.props;
     </script>
 	</head>
 
-  <body class="theme-light dark:theme-dark">
+  <body class={clsx(['theme-light', bodyClass])}>
     <slot />
     <svg width="10" height="10" viewBox="0 0 10 10">
       <clipPath id="squircleClip" clipPathUnits="objectBoundingBox">
