--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -1,18 +1,19 @@
 ---
-import MyLinks from "@components/MyLinks";
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import { faHeart } from "@fortawesome/sharp-solid-svg-icons";
+import type { ClassValue } from "clsx";
 
-export type Props = {
-  showLinks?: boolean;
-};
+export interface Props {
+  class?: ClassValue;
+}
 
-const { showLinks = true } = Astro.props;
+const { class: className } = Astro.props;
 
 ---
-<footer class="@container px-inset py-6 font-serif">
-  <div class="flex flex-col gap-6 items-center justify-end text-sm">
-    {showLinks && <MyLinks className="text-xl max-w-[520px] py-4" />}
+<footer class:list={["@container font-[loretta-variable]", className]}>
+  <div class="flex flex-col gap-2 items-center justify-end text-sm">
+    <!-- <hr class=" border-black/20 border-t w-1/3 mb-8"> -->
+    <p class="text-lg/none font-medium [font-variation-settings:'wght'_520]">&copy; {new Date().getFullYear()} David Demaree</p>
     <div class="text-center flex gap-2 italic">
       <p class="m-0">
         Made with{" "}
