--- a/src/components/SiteLayout.astro
+++ b/src/components/SiteLayout.astro
@@ -1,27 +1,38 @@
 ---
 import { ClassValue, clsx } from "clsx";
 import BaseLayout, { type Props as LayoutProps } from "./BaseLayout.astro";
-import SiteFooter, { type Props as FooterProps } from "./SiteFooter.astro";
-import SiteHeader from "./SiteHeader.astro";
+import SiteFooter from "./SiteFooter.astro";
 import ReactSiteHeader from "@/components/SiteHeader";
 
-export type Props = LayoutProps & FooterProps & {
-  mainClass?: ClassValue;
-  mainWrapper?: boolean;
-}
+export type Props = LayoutProps & {
+    mainClass?: ClassValue;
+    mainWrapper?: boolean;
+  };
 
-const { mainWrapper = true, showLinks = true } = Astro.props;
+const { mainWrapper = true } = Astro.props;
 ---
-<BaseLayout metadata={Astro.props.metadata} section={Astro.props.section}>
-  <div class="grid grid-cols-1 grid-rows-[auto_1fr_auto] min-h-screen">
-    <div>
-      <ReactSiteHeader />
-      <SiteHeader />
-    </div>
-    {mainWrapper && <main class={clsx(Astro.props.mainClass)}>
-      <slot />
-    </main>}
+
+<BaseLayout metadata={Astro.props.metadata} section={Astro.props.section} bodyClass={Astro.props.bodyClass}>
+  <div
+    class="siteGrid min-h-screen [--header-height:max(calc(15vw-72px),72px)]"
+  >
+    <ReactSiteHeader />
+    {
+      mainWrapper && (
+        <main class={clsx(Astro.props.mainClass)}>
+          <slot />
+        </main>
+      )
+    }
     {!mainWrapper && <slot />}
-    <SiteFooter showLinks={showLinks} />
+    <SiteFooter class="w-full max-w-[720px] px-inset pt-12 pb-8" />
   </div>
 </BaseLayout>
+<style>
+  :where(.siteGrid) {
+    @apply items-center justify-center justify-items-center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: clamp(72px,12vw,96px) 1fr auto;
+  }
+</style>
